# bittware-soc

./: bittware_config.json  bittware_soc.cpp  bittware_soc.hpp  main.cpp  manager.cpp  manager.hpp  meson.build  sdbusplus.hpp  sensor.cpp  sensor.hpp  smbus.cpp  smbus.hpp  vpd.cpp  vpd.hpp
